manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    cert-manager.io/cluster-issuer: "local-ca-issuer"
    haproxy-ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - demo.local
    secretName: ca-key-pair
  rules:
  - host: demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-svc
            port:
              number: 80
